--- a/CriminalIntent/app/src/main/AndroidManifest.xml
+++ b/CriminalIntent/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         </activity>
         <activity
             android:name=".CrimePagerActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".CrimeListActivity"
+            android:label="@string/app_name">
         </activity>
     </application>
 
